@@ -8,17 +8,18 @@ import com.gregtechceu.gtceu.api.capability.recipe.RecipeCapability;
 import com.gregtechceu.gtceu.api.recipe.kind.GTRecipe;
 import com.gregtechceu.gtceu.api.recipe.RecipeHelper;
 import com.gregtechceu.gtceu.api.recipe.content.Content;
-import com.gregtechceu.gtceu.api.recipe.ingredient.FluidIngredient;
 import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.AbstractMapIngredient;
 import com.gregtechceu.gtceu.api.recipe.lookup.ingredient.MapIngredientTypeManager;
-import com.gregtechceu.gtceu.common.data.GTRecipeTypes;
 import com.gregtechceu.gtceu.common.item.armor.PowerlessJetpack;
 import com.gregtechceu.gtceu.config.ConfigHolder;
 
-import net.neoforged.neoforge.registries.ForgeRegistries;
 
+import com.gregtechceu.gtceu.data.recipe.GTRecipeTypes;
 import com.mojang.datafixers.util.Either;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.neoforged.neoforge.fluids.crafting.FluidIngredient;
+import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
 import org.jetbrains.annotations.*;
 
 import java.util.*;
@@ -173,8 +174,8 @@ public final class RecipeDB {
     boolean add(@NotNull GTRecipe recipe, @NotNull List<@Unmodifiable List<AbstractMapIngredient>> ingredients) {
         // Add combustion fuels to the Powerless Jetpack
         if (recipe.getType() == GTRecipeTypes.COMBUSTION_GENERATOR_FUELS) {
-            Content content = recipe.getInputContents(FluidRecipeCapability.CAP).get(0);
-            FluidIngredient fluid = FluidRecipeCapability.CAP.of(content.content);
+            Content content = recipe.getInputContents(FluidRecipeCapability.CAP).getFirst();
+            SizedFluidIngredient fluid = FluidRecipeCapability.CAP.of(content.content);
             PowerlessJetpack.FUELS.putIfAbsent(fluid, recipe.duration);
         }
         if (addRecursive(recipe, ingredients, rootBranch, 0)) {
@@ -215,7 +216,7 @@ public final class RecipeDB {
                         if (ConfigHolder.INSTANCE.dev.debug || GTCEu.isDev()) {
                             GTCEu.LOGGER.warn(
                                     "Recipe duplicate or conflict found in GTRecipeType {} and was not added. See next lines for details",
-                                    ForgeRegistries.RECIPE_TYPES.getKey(recipe.getType()));
+                                    BuiltInRegistries.RECIPE_TYPE.getKey(recipe.getType()));
                             if (v.left().isPresent()) {
                                 GTCEu.LOGGER.warn("Attempted to add GTRecipe: {}, which conflicts with {}",
                                         recipe.getId(), v.left().get().getId());
